перевод углов вынес в конвертеры, туда же доабвил перевод точки с декартовой в полярную ск и обратно

--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -58,13 +58,13 @@
         </MudItem>
 
         <MudItem xs="6" md="4" lg="3">
-            <MudLink Href="/angle" Underline="Underline.None">
+            <MudLink Href="/converters" Underline="Underline.None">
                 <MudPaper Class="pa-6 flex-grow-1 flex-shrink-0">
                     <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.SignalCellularNull" />
+                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Transform" />
                     </MudGrid>
                     <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Перевод углов</MudText>
+                        <MudText Typo="Typo.body2" Class="mt-4">Конвертеры</MudText>
                     </MudGrid>
                 </MudPaper>
             </MudLink>
