--- a/Sunduk.PWA/Pages/OtherStuffPage.razor
+++ b/Sunduk.PWA/Pages/OtherStuffPage.razor
@@ -8,7 +8,7 @@
         <MudTabPanel Text="Скругление">
             <RadiusComponent />
         </MudTabPanel>
-        <MudTabPanel Text="Ниппель">
+        <MudTabPanel Text="Сфера ниппеля">
             <NippleComponent />
         </MudTabPanel>
         <MudTabPanel Text="Конус сверла">
