--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
     }
     <MudNavLink Href="/thread" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LineWeight">Точение резьбы</MudNavLink>
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
-    <MudNavLink Href="/angle" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SignalCellularNull">Перевод углов</MudNavLink>
+    <MudNavLink Href="/converters" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Transform">Конвертеры</MudNavLink>
     @if (ExperimantalMode)
     {
         <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.MenuBook">База знаний</MudNavLink>
