--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -17,6 +17,7 @@
 @using Sunduk.PWA.Components
 @using Sunduk.PWA.Components.CAM
 @using Sunduk.PWA.Components.Stuff
+@using Sunduk.PWA.Components.Converters
 @using Sunduk.PWA.Components.Knowledge
 @using Sunduk.PWA.Util
 @using Sunduk.PWA.Dialogs
