--- a/Sunduk.PWA/Components/Knowledge/AboutKnowledgeComponent.razor
+++ b/Sunduk.PWA/Components/Knowledge/AboutKnowledgeComponent.razor
@@ -1,7 +1,11 @@
 ﻿<MudContainer>
-    <MudText Typo="Typo.body2">Когда-нибудь тут будет что-то полезное.@* Большая часть взята с сайтов: <br/>
+    <MudText Typo="Typo.body1">Когда-нибудь наполнится...@* Большая часть взята с сайтов: <br/>
         • https://www.planetacam.ru/ <br/>
         • https://sandvik.coromant.com/ <br/>*@
+    </MudText>
+    <MudText Typo="Typo.body2">Сюда переехали 
+    <MudLink Typo="Typo.body2" Href="/knowledge/center-length">"Глубина центровки"</MudLink> и 
+    <MudLink Typo="Typo.body2" Href="/knowledge/vectors">"Вектора"</MudLink>;
     </MudText>
 </MudContainer>
 
