--- a/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
+++ b/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
@@ -8,10 +8,9 @@
     .desc{font-size: @Design.GetFontSize(breakpoint); font-style: italic; font-weight: lighter}
 </style>
 
-
-<MudText Typo="Typo.body2">
-    Программирование обработки на станках с числовым программным управлением (ЧПУ) Fanuc, осуществляется на языке <MudLink Typo=Typo.body2 @onclick="(() => gCodeMbox.Show())">G-кодов</MudLink>. 
-    Набор команд, по которым происходит обработка, называется управляющей программой (УП). Управляющая программа состоит из блоков (строк), 
+<MudText Typo="Typo.body2" Class="mt-2">
+    Программирование обработки на станках с числовым программным управлением (ЧПУ) Fanuc, осуществляется на языке <MudLink Typo=Typo.body2 @onclick="(() => gCodeMbox.Show())">G-кодов</MudLink>.
+    Набор команд, по которым происходит обработка, называется управляющей программой (УП). Управляющая программа состоит из блоков (строк),
     которые могут иметь одну, или несколько команд (G-кодов, M-кодов и пр), каждый блок завершается символом конца блока (EOB - End Of Block).
     Любая УП дожна начинаться с блока с <MudLink Typo=Typo.body2 @onclick="(() => programNumberMbox.Show())">номером УП</MudLink> и заканчиваться командой завершения.
 </MudText>
@@ -44,15 +43,15 @@
 </MudField>
 
 <MudText Typo="Typo.body2">
-    Команды УП контролируют все функции обработки, включая:<br/>
-    &nbsp;&nbsp;* Выбор инструмента;<br/>
-    &nbsp;&nbsp;* Установка направления и частоты вращения шпинделя;<br/>
-    &nbsp;&nbsp;* Выбор скорость подачи;<br/>
-    &nbsp;&nbsp;* Позиционирование подвижных органов станка.<br/>
+    Команды УП контролируют все функции обработки, включая:<br />
+    &nbsp;&nbsp;* Выбор инструмента;<br />
+    &nbsp;&nbsp;* Установка направления и частоты вращения шпинделя;<br />
+    &nbsp;&nbsp;* Выбор скорость подачи;<br />
+    &nbsp;&nbsp;* Позиционирование подвижных органов станка.<br />
 </MudText>
 
 <MudText Typo="Typo.body2">
-    Все блоки УП, кроме первого, могут иметь (необязательно) явно указанный номер, начинающийся с буквы N. Эти номера являются метками для перехода/возврата к конкретным блокам и они могут иметь любую очередность. 
+    Все блоки УП, кроме первого, могут иметь (необязательно) явно указанный номер, начинающийся с буквы N. Эти номера являются метками для перехода/возврата к конкретным блокам и они могут иметь любую очередность.
     Не рекомендуется применять одинаковые номера блоков в пределах одной УП.
 </MudText>
 <MudField Variant=Variant.Filled Label="Пример допустимой нумерации" DisableUnderLine=true>
@@ -83,11 +82,11 @@
 </MudField>
 
 <MudText Typo="Typo.body2">
-    Если не брать во внимание подготовительные коды отвечающие за выбор инструмента, вращение шпинделя, 
+    Если не брать во внимание подготовительные коды отвечающие за выбор инструмента, вращение шпинделя,
     то обработка по УП представляет собой движение рабочих органов станка по указанным координатам, описывающим траеторию движения инструмента.
-    Принято указывать координы относительно заранее определенной <MudLink Typo=Typo.body2 @onclick="(() => coordinateSystemMbox.Show())">системы координат заготовки</MudLink> (нулевой точки детали). 
+    Принято указывать координы относительно заранее определенной <MudLink Typo=Typo.body2 @onclick="(() => coordinateSystemMbox.Show())">системы координат заготовки</MudLink> (нулевой точки детали).
 </MudText>
-<MudDivider/>
+<MudDivider />
 <MudText Typo="Typo.body2">@info2</MudText>
 
 <MudField Variant=Variant.Filled Label="Пример УП с модальными кодами" DisableUnderLine=true>
@@ -138,12 +137,11 @@
             <tr>
                 <td><MudLink Href="/knowledge/programming-g01">G01</MudLink></td>
                 <td>Линейная <MudLink Typo=Typo.body2 @onclick="(() => interpolationMbox.Show())">интерполяция</MudLink> – перемещение по прямой линии на указанной подаче</td>
-                
+
             </tr>
         </tbody>
     </MudSimpleTable>
 </MudField>
-
 
 <MudMessageBox @ref="gCodeMbox" Title="Язык G-кодов">
     <MessageContent>
