--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
@@ -8,9 +8,8 @@
     .desc{font-size: @Design.GetFontSize(breakpoint); font-style: italic; font-weight: lighter}
 </style>
 
-
-<MudText Typo=Typo.body2>
-    Команда G01 подает инструмент вдоль прямой линии по координатам указанным относительно центра системы координат заготовки. 
+<MudText Typo=Typo.body2 Class="mt-2">
+    Команда G01 подает инструмент вдоль прямой линии по координатам указанным относительно центра системы координат заготовки.
     Указание позиции допускается в <MudLink Typo=Typo.body2 @onclick="(()=>absMbox.Show())">абсолютных</MudLink> и <MudLink Typo=Typo.body2 @onclick="(()=>incMbox.Show())">относительных</MudLink> значениях.
     Скорость подачи задается кодом F и действует до ввода нового значения, нет необходимости задавать её в каждом блоке.
     Скорость подачи, заданная F-кодом, измеряется вдоль траектории движения инструмента, следовательно при движении по нескольким осям одновременно,
