--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -65,16 +65,19 @@ https://github.com/dece1ver/Sunduk
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 2), new DateTime(2021, 5, 12), new string[]{ "Переписал резьбу: добавил расчеты съемов, проходов. Сделал не фиксированный шаг. " +
             "Метрическая по ГОСТ 24705-2004. Трубная цилиндрическая по ГОСТ 6357-81.", "Добавил диалог с ченджлогом." }));
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 4), new DateTime(2021, 9, 29), new string[] { "Переехал на новый адрес sunduk.one", "Чуток косметики и фиксов." }));
-        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 5), new DateTime(2021, 10, 12), new string[] { 
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 5), new DateTime(2021, 10, 12), new string[] {
             "Добавил трапецеидальную резьбу по ГОСТ 24737-81.",
             "Добавил коническую резьбу по ГОСТ 6111-52.",
             "Во всякую хрень добавил глубины центровых отверстий по ГОСТ 14034-74.",
             "Изменил цветовую схему."
         }));
-        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 6), new DateTime(2021, 12, 14), new string[] { 
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 6), new DateTime(2021, 12, 14), new string[] {
             "Переписал фаску и радиус, добавил обратные варианты. На фаске добавил точный расчет."}));
-        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 7), new DateTime(2022, 1, 15), new string[] { 
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 7), new DateTime(2022, 1, 15), new string[] {
             "Добавил обратную связь.", "Разблокировал возможность использования экспериментальных функций в релизной версии."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 8), new DateTime(2022, 2, 4), new string[] {
+            "Добавил расчет сферы ниппеля.", "Добавил пересчет точки с декартовой СК в полярную и обратно.",
+            "Перенес глубину центровки и векторы из всякой хрени в базу знаний."}));
         Info.Reverse();
     }
 
