--- a/Sunduk.PWA/Pages/Knowledge.razor
+++ b/Sunduk.PWA/Pages/Knowledge.razor
@@ -2,21 +2,34 @@
 @using Sunduk.PWA.Components.Knowledge;
 
 
-<MudContainer MaxWidth=MaxWidth.False Class="mt-2">
-    <MudAlert Class="rounded-0" Severity="Severity.Warning" Icon="fas fa-crutch">Раздел в разработке</MudAlert>
+<MudContainer MaxWidth=MaxWidth.False Class="mt-0">
     <MudGrid Spacing=1>
-        <MudItem xs=12 sm=5 lg=4 >
-            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Содержание" InnerPadding="false">
-                <MudList Dense=true Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article">
+        <MudItem xs=12 sm=4 lg=3 >
+                <MudList Dense=true Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article" Class="mt-n2">
                     <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Info" Value="@("about")" Href="/knowledge/about">
                         <MudText Class="mx-n4" Typo=Typo.body2>О разделе</MudText>
                     </MudListItem>
-                    <MudListItem Dense=true Icon="@Icons.Material.Filled.Folder">
+
+                    <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Folder" Expanded="true">
                         <ChildContent>
-                             <MudText Class="mx-n4" Typo=Typo.body2>Программирование Fanuc</MudText>
+                            <MudText Class="mx-n4" Typo=Typo.body2>Справочник</MudText>
                         </ChildContent>
                         <NestedList>
-                            <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="@("general-programming")" Href="/knowledge/general-programming">
+                            <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="@("center-length")" Href="/knowledge/center-length">
+                                <MudText Class="mx-n4" Typo=Typo.body2>Глубина центровки</MudText>
+                            </MudListItem>
+                            <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="@("vectors")" Href="/knowledge/vectors">
+                                <MudText Class="mx-n4" Typo=Typo.body2>Вектора</MudText>
+                            </MudListItem>
+                        </NestedList>
+                    </MudListItem>
+
+                    <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Folder">
+                        <ChildContent>
+                            <MudText Class="mx-n4" Typo=Typo.body2>Программирование Fanuc</MudText>
+                        </ChildContent>
+                        <NestedList>
+                            <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="@("fanuc-general-programming")" Href="/knowledge/fanuc-general-programming">
                                 <MudText Class="mx-n4" Typo=Typo.body2>Общая информация</MudText>
                             </MudListItem>
                             <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="@("programming-g00")" Href="/knowledge/programming-g00">
@@ -28,18 +41,17 @@
                         </NestedList>
                     </MudListItem>
                 </MudList>
-            </MudField>
         </MudItem>
-        <MudItem xs=12 sm=7 lg=8>
-            <MudField Variant="Variant.Filled" DisableUnderLine="true" Label="Информация">
-                @switch (Article?.ToString())
+        <MudItem xs=12 sm=8 lg=9 Class="mr-n4">
+            @switch (Article?.ToString())
             {
                 case "about": <AboutKnowledgeComponent/> break;
-                case "general-programming": <GeneralPrograming/> break;
+                case "center-length": <CenterLengthComponent/> break;
+                case "vectors": <VectorComponent/> break;
+                case "fanuc-general-programming": <GeneralPrograming/> break;
                 case "programming-g00": <ProgrammingG00/> break;
                 case "programming-g01": <ProgrammingG01/> break;
             }
-            </MudField>
         </MudItem>
     </MudGrid>
 </MudContainer>
